using java security policy with default security properties